finished the front-end of the website

--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,14 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,700" rel="stylesheet">
-  <title>Gabriel Sinca | Just A Web Developer</title>
+  <title>Gabriel Sinca</title>
+  <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.png" />
   <meta name="keywords" content="Portfolio website, website, site, programare, gabriel, sinca, gabrielsinca, freelancer, contact">
 
   <!-- build:css assets/styles/styles.css -->
   <link rel="stylesheet" href="temp/styles/styles.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1"
+    crossorigin="anonymous"></script>
   <!-- endbuild -->
 
 </head>
@@ -41,61 +44,52 @@
   <div class="page-section">
     <div class="wrapper">
       <div class="about">
-        <h1 class="section-title">Who Am I?</h1>
-        <div class="row">
+        <h1 class="page-section__section-title"><strong>Who</strong> Am I?</h1>
+        <div class="row row--gutters">
           <div class="row__medium-4">
             <img class="about__image" src="./assets/images/me.jpg" alt="Sinca Silviu Gabriel">
           </div>
           <div class="row__medium-8">
-            <p class="about__text">I'm a romanian student passionate about anything related to technology, especially web development and A.I. I'd like to consider myself as an aspiring entrepreneur. My goal is to never get hired and to always work for myself. I've been building websites for fun for more than 2 years now and I've finally decided to start my microbusiness by making websites professionally, while still having fun. The main technologies I use are HTML, CSS, and Javascript and WordPress. If you want to know more about my work feel free to contact me <a>here</a>.</p>
+            <p class="page-section__section-description about__text">I'm a romanian student passionate about anything
+              related to technology, especially web development and A.I. I'd like to consider myself as an aspiring
+              entrepreneur. My goal is to never get hired and to always work for myself. I've been building websites
+              for fun for more than 2 years now and I've finally decided to start my microbusiness by making websites
+              professionally, while still having fun. The main technologies I use are HTML, CSS, and Javascript and
+              WordPress. If you want to know more about my work feel free to contact me <a>here</a>.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-    <div class="page-section">
+  <div class="page-section">
+    <div class="about-business">
       <div class="wrapper">
-        <h1 class="section-title">Why Am I Here?</h1>
-        <h2 class="section-subtitle">I'm here to help you and your business!</h2>
-        <p class=""></p>
-      </div>
-    </div>
 
-    <div class="page-section">
-    <div class="wrapper">
-      <h1 class="section-title">Portfolio</h1>
-      <div class="row">
-        <div class="portfolio-item row__medium-4">
-          <div class="portfolio-item__image">
-            <img src="./assets/images/portfolio-0.png" alt="">
-          </div>
-          <div class="portfolio-item__text">
-            <p>This is the webite that I built for Firstkinetic, a wonderful kinetotherapy clinic located in Braila, Romania</p>
-          </div>
-        </div>
-        <div class="portfolio-item row__medium-3">
-          <div class="portfolio-item__image">
-            <img src="./assets/images/portfolio-1.png" alt="">
-          </div>
-          <div class="portfolio-item__text">
-            <p>This is one of the example websites I built.</p>
-          </div>
-        </div>
-        <div class="portfolio-item row__medium-3">
-          <div class="portfolio-item__image">
-            <img src="./assets/images/portfolio-2.jpg" alt="">
-          </div>
-          <div class="portfolio-item__text">
-            <p>This is one of the example websites I built.</p>
-          </div>
-        </div>
-        <div class="portfolio-item row__medium-3">
-          <div class="portfolio-item__image">
-            <img src="./assets/images/example_website_3.png" alt="">
-          </div>
-          <div class="portfolio-item__text">
-            <p>This is one of the example websites I built.</p>
+        <h1 class="page-section__section-title"><strong>Why</strong> Am I Here?</h1>
+        <h2 class="page-section__section-subtitle">I'm here to help you and your business!</h2>
+        <p class="page-section__section-description">My purpose is to help entrepreneurs like you, with small or medium
+          enterprises grow and upgrade their businesses by developing them a website. But <strong>how?</strong> Well
+          here are the main steps:</p>
+        <div class="about-business__routine">
+          <div class="row row--gutters">
+
+            <div class="row__medium-3">
+              <i class="fas fa-code-branch icon icon--orange"></i>
+              <p class="page-section__section-description">I'll develop a modern, good looking website</p>
+            </div>
+            <div class="row__medium-3">
+              <i class="fas fa-user-friends icon icon--orange"></i>
+              <p class="page-section__section-description">More people will know about you through the website</p>
+            </div>
+            <div class="row__medium-3">
+              <i class="fas fa-chart-line icon icon--orange"></i>
+              <p class="page-section__section-description">You will have more sales</p>
+            </div>
+            <div class="row__medium-3">
+              <i class="fas fa-dollar-sign icon icon--orange"></i>
+              <p class="page-section__section-description">And last but not least... financial happiness</p>
+            </div>
           </div>
         </div>
       </div>
@@ -104,65 +98,102 @@
 
   <div class="page-section">
     <div class="wrapper">
-      <div class="contact">
-        <h1 class="section-title">Contact me!</h1>
-        <h2 class="section-subtitle">I'll try my best to respond as soon as possible!</h2>
-        <p class="contact__text">If you want to know more about my work please feel free to contact me:</p>
-        <div class="row">
-          <div class="row__medium-6">
-            <div class="social social--phone">
-              insert phone icon here <br>
-              +40 0749174373<br>
+      <h1 class="page-section__section-title">Portfolio</h1>
+      <h2 class="page-section__section-subtitle page-section__section-subtitle--center">Here is some of my work:</h2>
+      <div class="row row--gutters">
+        <a class="page-section__link-black" href="http://Firstkinetic.ro">
+          <div class="portfolio-item row__medium-6">
+            <img class="portfolio-item__image" src="./assets/images/portfolio-0.png" alt="">
+            <div class="portfolio-item__text">
+              <h3>Lorem</h3>
+              <p>This is the webite that I built for Firstkinetic, a wonderful kinetotherapy clinic located in Braila,
+                Romania</p>
             </div>
           </div>
-          <div class="row__medium-6">
-            <div class="social social--email">
-              insert email icon here<br>
-              contact@gabrielsinca.com<br>
-              or<br>
-              gabrielsinca14@gmail.com<br>
+        </a>
+        <a class="page-section__link-black" href="https://gabrielsincaa.000webhostapp.com/">
+          <div class="portfolio-item row__medium-6">
+            <img class="portfolio-item__image" src="./assets/images/portfolio-1.png" alt="">
+            <div class="portfolio-item__text">
+              <h3>Lorem</h3>
+              <p>This is one of the example websites I built.</p>
             </div>
           </div>
-        </div>
+        </a>
+      </div>
+
+      <div class="row row--gutters">
+        <a class="page-section__link-black" href="https://gabrielsinca.github.io/travel-site">
+          <div class="portfolio-item row__medium-6">
+            <img class="portfolio-item__image" src="./assets/images/portfolio-2.jpg" alt="">
+            <div class="portfolio-item__text">
+              <h3>Lorem</h3>
+              <p>This is one of the example websites I built.</p>
+            </div>
+          </div>
+        </a>
+        <a class="page-section__link-black" href="https://gabrielsinca.github.io">
+
+          <div class="portfolio-item row__medium-6">
+            <img class="portfolio-item__image" src="./assets/images/example_website_3.png" alt="">
+            <div class="portfolio-item__text">
+              <h3>Lorem</h3>
+              <p>This is one of the example websites I built.</p>
+            </div>
+          </div>
+        </a>
       </div>
     </div>
   </div>
 
-  <!-- 
-    NOT SURE IF I'LL ADD THIS:
-
-    <div class="page-section">
+  <div class="page-section">
+    <div class="contact">
       <div class="wrapper">
-        <h3>HTML</h3>
-        <div class="bar">
-          <div class="skills html"></div>
+        <h1 class="page-section__section-title">Contact me!</h1>
+        <h2 class="page-section__section-subtitle">If you want to know more about my work please feel free to contact
+          me:</h2>
+        <div class="row row--gutters">
+          <div class="row__medium-6">
+            <div class="social social--phone">
+              <i class="fas fa-phone icon icon--orange"></i>
+              <p class="contact__text">+40 0749174373</p>
+            </div>
+          </div>
+          <div class="row__medium-6">
+            <div class="social social--email">
+              <i class="far fa-envelope icon icon--orange"></i>
+              <p class="contact__text">contact@gabrielsinca.com</p>
+              <p class="contact__text">gabrielsinca14@gmail.com</p>
+            </div>
+          </div>
         </div>
-        <h3>CSS & B.E.M.</h3>
-        <div class="bar">
-          <div class="skills css"></div>
-        </div>
-        <h3>Javascript</h3>
-        <div class="bar">
-          <div class="skills js"></div>
-        </div>
-        <h3>Node.js</h3>
-        <div class="bar">
-          <div class="skills node"></div>
-        </div>
-        <h3>WordPress</h3>
-        <div>
-          <div></div>
-        </div>
+        <p class="page-section__section-description">I'll try my best to respond as soon as possible!</p>
+
       </div>
     </div>
-  -->
+  </div>
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p class="site-footer_text">Copyright &copy; 2019 Sinca Silviu Gabriel. All rights reserved.</p>
-      <a href="#" class="btn open-modal">Get In Touch</a>
+      <div class="row row--gutters">
+        <div class="row__medium-8">
+          <p class="site-footer__text">Copyright &copy; 2019 Sinca Silviu Gabriel. All rights reserved. <a href="#"
+              class="btn open-modal">Get In Touch</a></p>
+        </div>
+        <div class="row__medium-4">
+          <h3 class="site-footer__social-header">Social media</h3>
+          <div class="site-footer__social-icons">
+            <a href="https://www.instagram.com/silviusinca/"><i class="fab fa-instagram icon icon--social"></i></a>
+            <a href="https://www.facebook.com/silviu.sinca"><i class="fab fa-facebook icon icon--social"></i></a>
+            <a href="https://twitter.com/gabriel_sinca"><i class="fab fa-twitter icon icon--social"></i></a>
+            <a href="https://github.com/gabrielsinca/"><i class="fab fa-github icon icon--social icon--social--last"></i></a>
+          </div>
+        </div>
+      </div>
     </div>
   </footer>
-  
+
+  <script src="./temp/scripts/App.js"></script>
 </body>
+
 </html>
