--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
   <div class="large-hero large-hero--background">
     <div class="large-hero__text">
       <h1 class="large-hero__title">Gabriel Sinca</h1>
-      <p class="large-hero__subtitle">Web Developer. Mentor. Human.</p>
+      <p class="large-hero__subtitle">Web Developer</p>
       <p class="large-hero__contact"><a class="btn btn--orange open-modal" href="#">Get in touch</a></p>
     </div>
   </div>
@@ -56,7 +56,7 @@
             <img class="about__image" src="./assets/images/me.jpg" alt="Sinca Silviu Gabriel">
           </div>
           <div class="row__medium-8">
-            <p class="page-section__section-description about__text">I'm Gabriel, a romanian student passionate about anything related to technology. When I discovered web development I was hooked by it. I loved and I still love when I see a website going from a blank page to a complex web app. It's an amazing feeling that gives me a lot of motivation and inspiration. And this is why I would be very happy to work with you for my next project!</p>
+            <p class="page-section__section-description about__text">I'm Gabriel, a 16 year old romanian student passionate about anything related to technology. When I discovered web development I was hooked by it. I loved and I still love when I see a website going from a blank page to a complex web app. It's an amazing feeling that gives me a lot of motivation and inspiration. And this is why I would be very happy to work with you!</p>
           </div>
         </div>
       </div>
