--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,11 @@
             <img class="about__image" src="./assets/images/me.jpg" alt="Sinca Silviu Gabriel">
           </div>
           <div class="row__medium-8">
-            <p class="page-section__section-description about__text">I'm Gabriel, a 16 year old romanian student passionate about anything related to technology. When I discovered web development I was hooked by it. I loved and I still love when I see a website going from a blank page to a complex web app. It's an amazing feeling that gives me a lot of motivation and inspiration. And this is why I would be very happy to work with you!</p>
+            <p class="page-section__section-description about__text">I'm Gabriel, a 16 year old romanian student
+              passionate about anything related to technology. When I discovered web development I was hooked by it. I
+              loved and I still love when I see a website going from a blank page to a complex web app. It's an amazing
+              feeling that gives me a lot of motivation and inspiration. And this is why I would be very happy to work
+              with you!</p>
           </div>
         </div>
       </div>
@@ -101,42 +105,45 @@
     <h2 class="page-section__section-subtitle page-section__section-subtitle--center">Here is some of my work:</h2>
     <div class="wrapper">
 
-    <section class="gallery">
-      <figure class="gallery__item">
-        <a href="http://firstkinetic.ro/" target="_blank">
-          <img src="./assets/images/portfolio-0.png" alt="" class="gallery__image">
-          <figcaption class="gallery__image-caption">
-            Dynamic website built with WordPress
-          </figcaption>
-      </figure></a>
+      <section class="gallery">
 
+        <figure class="gallery__item">
+          <a href="https://gabrielsinca.github.io/budget-app/" target="_blank">
+            <img class="gallery__image" src="./assets/images/portfolio-3.jpg">
+            <figcaption class="gallery__image-caption">
+              Web app built with HTML, CSS and Javascript
+            </figcaption>
+          </a>
+        </figure>
+        <figure class="gallery__item">
+          <a href="http://firstkinetic.ro/" target="_blank">
+            <img src="./assets/images/portfolio-0.png" alt="" class="gallery__image">
+            <figcaption class="gallery__image-caption">
+              Dynamic website built with WordPress
+            </figcaption>
+          </a>
+        </figure>
 
-      <figure class="gallery__item">
-        <a href="https://gabrielsincaa.000webhostapp.com/" target="_blank">
-          <img class="gallery__image" src="./assets/images/portfolio-1.png">
-          <figcaption class="gallery__image-caption">
-            Static website built with HTML, CSS and Javascript
-          </figcaption>
-      </figure></a>
+        <figure class="gallery__item">
+          <a href="https://gabrielsinca.github.io/travel-site" target="_blank">
+            <img class="gallery__image" src="./assets/images/portfolio-2.jpg">
+            <figcaption class="gallery__image-caption">
+              Dynamic website built with HTML, CSS, Node.js and Javascript
+            </figcaption>
+          </a>
+        </figure>
 
-      <figure class="gallery__item">
-        <a href="https://gabrielsinca.github.io/travel-site" target="_blank">
-          <img class="gallery__image" src="./assets/images/portfolio-2.jpg">
-          <figcaption class="gallery__image-caption">
-            Dynamic website built with HTML, CSS, Node.js and Javascript
-          </figcaption>
-      </figure></a>
+        <figure class="gallery__item">
+          <a href="https://gabrielsincaa.000webhostapp.com/" target="_blank">
+            <img class="gallery__image" src="./assets/images/portfolio-1.png">
+            <figcaption class="gallery__image-caption">
+              Static website built with HTML, CSS and Javascript
+            </figcaption>
+          </a>
+        </figure>
 
-      <figure class="gallery__item">
-        <a href="https://gabrielsinca.github.io" target="_blank">
-          <img class="gallery__image" src="./assets/images/portfolio-3.png">
-          <figcaption class="gallery__image-caption">
-            Static website built with HTML and CSS
-          </figcaption>
-      </figure></a>
-
-    </section>
-</div>
+      </section>
+    </div>
   </div>
 
   <div class="page-section" id="contact">
@@ -187,16 +194,18 @@
   </footer>
   <div class="modal">
     <div class="modal__inner">
-      <h2 class="page-section__section-subtitle"><i class="far section-title__icon fa-envelope icon icon--orange"></i> Get
+      <h2 class="page-section__section-subtitle"><i class="far section-title__icon fa-envelope icon icon--orange"></i>
+        Get
         in <strong>Touch</strong></h2>
       <div class="wrapper wrapper--narrow">
-        <p class="modal__description">Please feel free to contact me anytime! I'll try my best to respond as fast as possible!</p>
+        <p class="modal__description">Please feel free to contact me anytime! I'll try my best to respond as fast as
+          possible!</p>
       </div>
       <div class="social-icons">
-          <a class="social-icons__icon" href="https://www.instagram.com/silviusinca/"><i class="fab fa-instagram icon icon--orange"></i></a>
-          <a class="social-icons__icon" href="https://www.facebook.com/silviu.sinca"><i class="fab fa-facebook icon icon--orange"></i></a>
-          <a class="social-icons__icon" href="https://twitter.com/gabriel_sinca"><i class="fab fa-twitter icon icon--orange"></i></a>
-          <a class="social-icons__icon" href="https://github.com/gabrielsinca/"><i class="fab fa-github icon icon--orange"></i></a>
+        <a class="social-icons__icon" href="https://www.instagram.com/silviusinca/"><i class="fab fa-instagram icon icon--orange"></i></a>
+        <a class="social-icons__icon" href="https://www.facebook.com/silviu.sinca"><i class="fab fa-facebook icon icon--orange"></i></a>
+        <a class="social-icons__icon" href="https://twitter.com/gabriel_sinca"><i class="fab fa-twitter icon icon--orange"></i></a>
+        <a class="social-icons__icon" href="https://github.com/gabrielsinca/"><i class="fab fa-github icon icon--orange"></i></a>
       </div>
     </div>
     <div class="modal__close">X</div>
