changed the linkedin link

--- a/app/index.html
+++ b/app/index.html
@@ -205,7 +205,7 @@
       <div class="social-icons">
         <a class="social-icons__icon" href="https://www.instagram.com/silviusinca/"><i class="fab fa-instagram icon icon--orange"></i></a>
         <a class="social-icons__icon" href="https://www.facebook.com/silviu.sinca"><i class="fab fa-facebook icon icon--orange"></i></a>
-        <a class="social-icons__icon" href="https://www.linkedin.com/in/gabriel-sinca-  49919a176/"><i class="fab fa-linkedin icon icon--orange"></i></a>
+        <a class="social-icons__icon" href="https://www.linkedin.com/in/gabriel-sinca-49919a176/"><i class="fab fa-linkedin icon icon--orange"></i></a>
         <a class="social-icons__icon" href="https://twitter.com/gabriel_sinca"><i class="fab fa-twitter icon icon--orange"></i></a>
         <a class="social-icons__icon" href="https://github.com/gabrielsinca/"><i class="fab fa-github icon icon--orange"></i></a>
       </div>
