--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,8 @@
   <title>Gabriel Sinca</title>
   <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.png" />
   <meta name="keywords" content="portfolio, website, gabrielsinca, freelancer">
-  <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1"
+  <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js"
+    integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1"
     crossorigin="anonymous"></script>
 
   <!-- build:css assets/styles/styles.css -->
@@ -42,7 +43,7 @@
   <div class="large-hero large-hero--background">
     <div class="large-hero__text">
       <h1 class="large-hero__title">Gabriel Sinca</h1>
-      <p class="large-hero__subtitle">Web Developer</p>
+      <p class="large-hero__subtitle">Fullstack Engineer</p>
       <p class="large-hero__contact"><a class="btn btn--orange open-modal" href="#">Get in touch</a></p>
     </div>
   </div>
@@ -56,7 +57,7 @@
             <img class="about__image" src="./assets/images/me.jpg" alt="Sinca Silviu Gabriel">
           </div>
           <div class="row__medium-8">
-            <p class="page-section__section-description about__text">I'm Gabriel, a 16 year old romanian student
+            <p class="page-section__section-description about__text">I'm Gabriel, a 17 year old romanian student
               passionate about anything related to technology. When I discovered web development I was hooked by it. I
               loved and I still love when I see a website going from a blank page to a complex web app. It's an amazing
               feeling that gives me a lot of motivation and inspiration. And this is why I would be very happy to work
@@ -162,8 +163,7 @@
           <div class="row__medium-6">
             <div class="social social--email">
               <i class="far fa-envelope icon icon--orange"></i>
-              <p class="contact__text">contact@gabrielsinca.com<br> gabrielsinca14@gmail.com
-              </p>
+              <p class="contact__text">gabrielsinca14@gmail.com</p>
             </div>
           </div>
         </div>
@@ -185,9 +185,11 @@
           <div class="site-footer__social-icons">
             <a href="https://www.instagram.com/silviusinca/"><i class="fab fa-instagram icon icon--social"></i></a>
             <a href="https://www.facebook.com/silviu.sinca"><i class="fab fa-facebook icon icon--social"></i></a>
-            <a href="https://www.linkedin.com/in/gabriel-sinca-49919a176/"><i class="fab fa-linkedin icon icon--social"></i></a>
+            <a href="https://www.linkedin.com/in/gabriel-sinca-49919a176/"><i
+                class="fab fa-linkedin icon icon--social"></i></a>
             <a href="https://twitter.com/gabriel_sinca"><i class="fab fa-twitter icon icon--social"></i></a>
-            <a href="https://github.com/gabrielsinca/"><i class="fab fa-github icon icon--social icon--social--last"></i></a>
+            <a href="https://github.com/gabrielsinca/"><i
+                class="fab fa-github icon icon--social icon--social--last"></i></a>
           </div>
         </div>
       </div>
@@ -203,11 +205,16 @@
           possible!</p>
       </div>
       <div class="social-icons">
-        <a class="social-icons__icon" href="https://www.instagram.com/silviusinca/"><i class="fab fa-instagram icon icon--orange"></i></a>
-        <a class="social-icons__icon" href="https://www.facebook.com/silviu.sinca"><i class="fab fa-facebook icon icon--orange"></i></a>
-        <a class="social-icons__icon" href="https://www.linkedin.com/in/gabriel-sinca-49919a176/"><i class="fab fa-linkedin icon icon--orange"></i></a>
-        <a class="social-icons__icon" href="https://twitter.com/gabriel_sinca"><i class="fab fa-twitter icon icon--orange"></i></a>
-        <a class="social-icons__icon" href="https://github.com/gabrielsinca/"><i class="fab fa-github icon icon--orange"></i></a>
+        <a class="social-icons__icon" href="https://www.instagram.com/silviusinca/"><i
+            class="fab fa-instagram icon icon--orange"></i></a>
+        <a class="social-icons__icon" href="https://www.facebook.com/silviu.sinca"><i
+            class="fab fa-facebook icon icon--orange"></i></a>
+        <a class="social-icons__icon" href="https://www.linkedin.com/in/gabriel-sinca-49919a176/"><i
+            class="fab fa-linkedin icon icon--orange"></i></a>
+        <a class="social-icons__icon" href="https://twitter.com/gabriel_sinca"><i
+            class="fab fa-twitter icon icon--orange"></i></a>
+        <a class="social-icons__icon" href="https://github.com/gabrielsinca/"><i
+            class="fab fa-github icon icon--orange"></i></a>
       </div>
     </div>
     <div class="modal__close">X</div>
