--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="large-hero large-hero--background">
     <div class="large-hero__text">
       <h1 class="large-hero__title">Gabriel Sinca</h1>
-      <p class="large-hero__subtitle">Web Developer</p>
+      <p class="large-hero__subtitle">Fullstack Engineer</p>
       <p class="large-hero__contact"><a class="btn btn--orange open-modal" href="#">Get in touch</a></p>
     </div>
   </div>
@@ -55,7 +55,7 @@
             <img class="about__image" src="./assets/images/me.jpg" alt="Sinca Silviu Gabriel">
           </div>
           <div class="row__medium-8">
-            <p class="page-section__section-description about__text">I'm Gabriel, a 16 year old romanian student
+            <p class="page-section__section-description about__text">I'm Gabriel, a 17 year old romanian student
               passionate about anything related to technology. When I discovered web development I was hooked by it. I
               loved and I still love when I see a website going from a blank page to a complex web app. It's an amazing
               feeling that gives me a lot of motivation and inspiration. And this is why I would be very happy to work
@@ -161,8 +161,7 @@
           <div class="row__medium-6">
             <div class="social social--email">
               <i class="far fa-envelope icon icon--orange"></i>
-              <p class="contact__text">contact@gabrielsinca.com<br> gabrielsinca14@gmail.com
-              </p>
+              <p class="contact__text">gabrielsinca14@gmail.com</p>
             </div>
           </div>
         </div>
