--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div class="row__medium-6">
             <div class="social social--phone">
               <i class="fas fa-phone icon icon--orange"></i>
-              <p class="contact__text">+40 0749174373</p>
+              <p class="contact__text"></p>
             </div>
           </div>
           <div class="row__medium-6">
