--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <img class="about__image" src="./assets/images/me.jpg" alt="Sinca Silviu Gabriel">
           </div>
           <div class="row__medium-8">
-            <p class="page-section__section-description about__text">I'm Gabriel, a 17 year old romanian student
+            <p class="page-section__section-description about__text">I'm Gabriel, an 18 year old romanian student
               passionate about anything related to technology. When I discovered web development I was hooked by it. I
               loved and I still love when I see a website going from a blank page to a complex web app. It's an amazing
               feeling that gives me a lot of motivation and inspiration. And this is why I would be very happy to work
@@ -175,7 +175,7 @@
     <div class="wrapper">
       <div class="row row--gutters">
         <div class="row__medium-8">
-          <p class="site-footer__text">Copyright &copy; 2020 Sinca Silviu Gabriel. All rights reserved. <a href="#"
+          <p class="site-footer__text">Copyright &copy; 2021 Sinca Silviu Gabriel. All rights reserved. <a href="#"
               class="btn btn--orange open-modal">Get In Touch</a></p>
         </div>
         <div class="row__medium-4">
